Add arduino port path finder

--- a/src/high_level/package.xml
+++ b/src/high_level/package.xml
@@ -14,6 +14,7 @@
   <depend>std_msgs</depend>
   <depend>numpy</depend>
   <depend>math</depend>
+  <depend>os</depend>
   <depend>stable_baselines3</depend>
   <depend>covaps</depend>
 
